--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <p class="lead" style="font-family: 'Quicksand', sans-serif; font-weight: 400; font-size: 1rem;">Comfort Loving Home Care is dedicated
             to providing the highest quality in home health and personal care services for the valued patients in Pennsylvenia.</p>
           <br>
-          <a href="homecare.html" class="btn btn-sm" role="button" aria-disabled="true" style="background-color: #77c9e6; color: white; border: 4px solid #77c9e6; border-radius: 25px;
+          <a href="services.html" class="btn btn-sm" role="button" aria-disabled="true" style="background-color: #77c9e6; color: white; border: 4px solid #77c9e6; border-radius: 25px;
             font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;<i class="fa-regular fa-calendar-check"></i> Book Assessment&nbsp;&nbsp;</a>
           <a href="homecare.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434 !important;
           font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;<i class="fa-solid fa-hand-holding-medical"></i> Join Us&nbsp;&nbsp;</a>
@@ -79,36 +79,32 @@
         </div>
         <div style="" class="col-sm">
           <section class="sectiontop">
-  <div class="container" style="font-weight: 400;">
-    <h4 style="font-size: 1.1rem; font-weight: 700;"> Have a question? send us a message.</h4>
-    <form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
+            <div class="container" style="font-weight: 400;">
+              <h4 style="font-size: 1.1rem; font-weight: 700;"> Have a question? send us a message.</h4>
+              <form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
 
-      <div class="form-group">
-        <label for="firstName"> Name</label>
-        <input type="text" id="firstName" name="firstName">
-      </div>
-
-      <div class="form-group">
-        <label for="latsName">Phone number</label>
-        <input type="text" id="lastName" name="lastName">
-      </div>
-
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email">
-      </div>
-
-      <div class="form-group">
-        <label for="message">Message:</label>
-        <textarea name="message" id="message" cols="30" rows="4"></textarea>
-      </div>
-
-      <button type="submit" style="font-weight: 700;">Submit</button>
-    </form>
-  </div>
-  <div id="status"></div>
-</section>
-</div>
+                <div class="form-group">
+                  <label for="name"> Name</label>
+                  <input type="text" id="name" name="name">
+                </div>
+                <div class="form-group">
+                  <label for="number">Phone number</label>
+                  <input type="text" id="number" name="number">
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" id="email" name="email">
+                </div>
+                <div class="form-group">
+                  <label for="message">Message:</label>
+                  <textarea name="message" id="message" cols="30" rows="5"></textarea>
+                </div>
+                <button type="submit" style="font-weight: 700;">Submit</button>
+              </form>
+            </div>
+            <div id="status"></div>
+          </section>
+        </div>
       </div>
     </div>
 
@@ -347,52 +343,54 @@
 
 
   <footer class="footer" style="padding: 3% 15% 2% 15%; background-color: black;">
-      <div class="">
-        <div class="row">
-          <div class="col-sm-12 col-md-6" style="font-weight: 700; color: white; padding-top: 6%; padding-right: 2%;">
-            <h4 style="font-weight: 700; font-size: 1.2rem;">About</h4>
-            <p class="" style="font-weight: 200; font-size: 0.8rem;">Comfort loving Home Care, an agency focusing in home care in Lancaster, Pennsylvania, can be your
-              partner in rebuilding your future by helping you recover from a recent illness that requires monitoring.
-              We will help you deal with the stresses of healing; and as for family caregivers, we will assist you and
-              make your load lighter in the process.</p>
-          </div>
-
-          <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
-            <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff;">&nbsp;Categories</h6>
-            <ul class="footer-links">
-              <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/aboutus.html">About Us</a></li>
-              <li style="font-weight:; color: white;"><a href="">Contact Us</a></li>
-              <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/services.html">Services</a></li>
-              <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/homecare.html">Career</a></li>
-              <li style="font-weight:; color: white;"><a href="">Blogs</a></li>
-            </ul>
-          </div>
-
-          <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
-            <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff">&nbsp;Quick Links</h6>
-            <ul class="footer-links">
-              <li><a href="">Respite Care</a></li>
-              <li><a href="">Homekeeping</a></li>
-              <li><a href="">Companionship Care</a></li>
-              <li><a href="">Medication Reminder</a></li>
-              <li><a href="">Meal Preparation</a></li>
-            </ul>
-          </div>
+    <div class="">
+      <div class="row">
+        <div class="col-sm-12 col-md-6" style="font-weight: 700; color: white; padding-top: 6%; padding-right: 2%;">
+          <h4 style="font-weight: 700; font-size: 1.2rem;">About</h4>
+          <p class="" style="font-weight: 200; font-size: 0.8rem;">Comfort loving Home Care, an agency focusing in home care in Lancaster, Pennsylvania, can be your
+            partner in rebuilding your future by helping you recover from a recent illness that requires monitoring.
+            We will help you deal with the stresses of healing; and as for family caregivers, we will assist you and
+            make your load lighter in the process.</p>
         </div>
-        <hr style="color: white !important;">
+
+        <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
+          <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff;">&nbsp;Categories</h6>
+          <ul class="footer-links">
+            <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/aboutus.html">About Us</a></li>
+            <li style="font-weight:; color: white;"><a href="">Contact Us</a></li>
+            <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/services.html">Services</a></li>
+            <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/homecare.html">Career</a></li>
+            <li style="font-weight:; color: white;"><a href="">Blogs</a></li>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
+          <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff">&nbsp;Quick Links</h6>
+          <ul class="footer-links">
+            <li><a href="">Respite Care</a></li>
+            <li><a href="">Homekeeping</a></li>
+            <li><a href="">Companionship Care</a></li>
+            <li><a href="">Medication Reminder</a></li>
+            <li><a href="">Meal Preparation</a></li>
+          </ul>
+        </div>
       </div>
-        <div class="row" style="font-weight:; color: white; padding-top: 4%; padding-bottom: 4%;">
-          <div class="col">
-            <p class="copyright-text" style="font-weight: 700; color: white; padding-bottom: 4%;">Copyright &copy; 2022 All Rights Reserved by
-         <a href="#">Comfort Loving Homecare</a>.
-            </p>
-            <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA</p>
-          </div>
-          <div class="col justify-right">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.930152817749!2d-76.58311668511665!3d40.07697008415748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c89bc7ab713b29%3A0x10d8377a8885e2d5!2sN%20Queen%20St%2C%20Maytown%2C%20PA%2017547%2C%20USA!5e0!3m2!1sen!2suk!4v1667959344362!5m2!1sen!2suk" width="420" height="180" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-        </div>
-</footer>
+      <hr style="color: white !important;">
+    </div>
+    <div class="row" style="font-weight:; color: white; padding-top: 4%; padding-bottom: 4%;">
+      <div class="col">
+        <p class="copyright-text" style="font-weight: 700; color: white; padding-bottom: 4%;">Copyright &copy; 2022 All Rights Reserved by
+          <a href="#">Comfort Loving Homecare</a>.
+        </p>
+        <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA</p>
+      </div>
+      <div class="col justify-right">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.930152817749!2d-76.58311668511665!3d40.07697008415748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c89bc7ab713b29%3A0x10d8377a8885e2d5!2sN%20Queen%20St%2C%20Maytown%2C%20PA%2017547%2C%20USA!5e0!3m2!1sen!2suk!4v1667959344362!5m2!1sen!2suk"
+          width="420" height="180" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
