--- a/homecare.html
+++ b/homecare.html
@@ -124,28 +124,27 @@ and job requirements.
     <section class="sectiontop">
   <div class="container" style="color: black; font-weight:;">
   <form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
-
-  <div class="form-group">
-  <label for="firstName"> Name</label>
-  <input type="text" id="firstName" name="firstName">
-  </div>
-
-  <div class="form-group">
-  <label for="latsName">Phone number</label>
-  <input type="text" id="lastName" name="lastName">
-  </div>
-
-  <div class="form-group">
-  <label for="email">Email</label>
-  <input type="email" id="email" name="email">
-  </div>
-
-  <div class="form-group">
-  <label for="message">Message:</label>
-  <textarea name="message" id="message" cols="30" rows="5"></textarea>
-  </div>
-
-  <button type="submit" style="font-weight: 700;">Submit</button>
+    <div class="form-group">
+      <label for="name"> Name</label>
+      <input type="text" id="name" name="name">
+    </div>
+    <div class="form-group">
+      <label for="number">Phone number</label>
+      <input type="text" id="number" name="number">
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email">
+    </div>
+    <div class="form-group">
+      <label for="role">Role/Position</label>
+      <input type="role" id="role" name="role">
+    </div>
+    <div class="form-group">
+      <label for="message">Message:</label>
+      <textarea name="message" id="message" cols="30" rows="5"></textarea>
+    </div>
+  <button type="submit" style="font-weight: 700;">Apply</button>
   </form>
   </div>
   <div id="status"></div>
