--- a/index.html
+++ b/index.html
@@ -160,89 +160,55 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="images/cardgroom.png" class="card-img-top" alt="...">
+            <img src="images/HHA.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
+              <p class="card-text" style="padding-bottom: 1rem;">We know how important it is for many seniors to continue living in their
+                homes, and we are proud to make that possible. Most seniors find joy and meaning when they can live in the home
+                they love as they age and remain close to their community. </p>
+              <a href="hha.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434;
+              border-radius: 25px; color: #455434;
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;
+              Read more&nbsp;</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="images/CC.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text" style="padding-bottom: 1rem;">Our compassionate caregivers help older adults live
+                independently and comfortably in their own homes. The comprehensive services we offer are customized and
+                tailored for each senior to ensure in-home care is an enjoyable experience.</p>
+              <a  href="companionship.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
               font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="images/cardmed.png" class="card-img-top" alt="...">
+            <img src="images/RC.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
+              <p class="card-text" style="padding-bottom: 1rem;">Respite care is defined as the transfer of primary caregiving
+                responsibilities to another person, typically a professional caregiver, relative or friend, in order for primary
+                caregivers to receive temporary relief from caregiving responsibilities.</p>
+              <a  href="respitecare.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
               font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="images/cardmeal.png" class="card-img-top" alt="...">
+            <img src="images/24C.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
-              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="images/cardlight.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
+              <p class="card-text" style="padding-bottom: 1rem;">If a 24-hour home care is desired, we have you covered. we work with you and your loved one to create an individualized plan of care</p>
+              <a  href="24care.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
               font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
             </div>
           </div>
         </div>
       </div>
       <br>
-      <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-          <div class="card">
-            <img src="" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
-              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
-              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
-              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
-              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br><br>
+      <br>
     </div>
 
     <div style="color: white; padding: 5% 0; background-color: #0E1904; ">
