--- a/hha.html
+++ b/hha.html
@@ -35,7 +35,7 @@
   <div class="">
     <nav class="navbar navbar-expand-lg" style="">
       <div class="container-fluid">
-        <a href="" class="navbar-brand">
+        <a href="index.html" class="navbar-brand">
           <img class="imgnav" src="images/clhcfinallonglogowhite.png" height="50" alt="CLHC">
         </a>
         <button type="button" class="animate__animated animate__flipInX navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -62,50 +62,45 @@
       </div>
     </nav>
     <img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="" class="cover-image">
-    <div class="con2" style="color: #77c9e6; background-color:; padding:; padding-bottom: 2rem;">
+    <div class="con2" style="color: #77c9e6; background-color:; padding:; padding-bottom:;">
       <!--<h1 class="display-4" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
         Caregiver Jobs</h1>-->
       <br>
-      <h1 class="text-center" style="padding: 3% 15% 0 15%; font-size: 1.7rem; color: #133544; font-weight: 700;">Home Health Aide<h1>
-          <h4 class="display-4" style="padding: 1% 15% 0 15%; text-align: left; color: #272727; font-size: 1rem;
-          font-family: 'Quicksand', sans-serif; font-weight: 500;">hhhhhh
-          </h4>
+      <h1 class="text-center" style="padding: 0 15% 0 15%; font-size: 1.7rem; color: #133544; font-weight: 700;">Home Health Aide</h1>
+      <h4 class="display-4" style="padding: 1% 15% 0 15%; text-align: left; color: #272727; font-size: 1rem;
+          font-family: 'Quicksand', sans-serif; font-weight: 500;">We know how important it is for many seniors to continue
+          living in their homes, and we are proud to make that possible. Most seniors find joy and meaning when they can live
+          in the home they love as they age and remain close to their community. Comfort Loving home care provides senior
+          care services that can help the elderly remain independent in their own homes.<br><br>
+          We believe that an in-home care plan should be customized to each individual's needs, goals, and living situation.
+          The best care improves quality of life by focusing on the care activities that increase engagement, improve physical
+          and mental wellness, and bring happiness, purpose and hope.<br>Our services focus on physical needs and total
+          wellbeing. We believe that everyone should experience the best of life, no matter their age or the level of care
+          that is needed.
+        </h4><br><br>
 
+        <h4 style="margin-bottom: 0; padding: 6% 15% 4% 15%; color: black; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png'); text-align: left; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
+          <span style="font-weight: 700;">Our in-home care includes:</span><br><br>
+        <ul>
+        <li>Personal care assistance (bathing, grooming, dressing, toileting, etc.)</li>
+        <li>Companionship and emotional support</li>
+        <li>Meal planning and preparation</li>
+        <li>Laundry and light housekeeping</li>
+        <li>Medication reminders</li>
+        <li>Assistance with other activities of daily living </li>
+        </ul></h4>
 
-          <div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png');" class="col-sm">
+          <div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/nqpgJm7/CLHC-banners-plai.png');" class="col-sm  text-center">
             <br>
-            <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: black; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight:400;">
-              Are you interested in starting your career with us today? Contact us by filling the form below and we will be back in touch with you shortly.</h4>
-
-            <section class="sectiontop">
-              <div class="container" style="color: black; font-weight:;">
-                <form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
-
-                  <div class="form-group">
-                    <label for="firstName"> Name</label>
-                    <input type="text" id="firstName" name="firstName">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="latsName">Phone number</label>
-                    <input type="text" id="lastName" name="lastName">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email">
-                  </div>
-
-                  <div class="form-group">
-                    <label for="message">Message:</label>
-                    <textarea name="message" id="message" cols="30" rows="5"></textarea>
-                  </div>
-
-                  <button type="submit" style="font-weight: 700;">Submit</button>
-                </form>
-              </div>
-              <div id="status"></div>
-            </section>
+            <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center;
+            color: white; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight:700;">
+              Are you interested in our Home Health Aide services? Click the 'Contact us' button below for more information or call us now on (+717-824-7199).</h4>
+              <br><a href="contactus.html" class="btn btn-md contactusbtn text-center" role="button" aria-disabled="true"
+              style="border: 4px solid white;
+              border-radius: 25px; color: white;
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: white !important;" class="btn">&nbsp;&nbsp;
+              Contact us&nbsp;</a>
+              <br><br>
           </div>
 
           <!--<footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
@@ -125,22 +120,21 @@
                 <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
                   <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff;">&nbsp;Categories</h6>
                   <ul class="footer-links">
-                    <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/aboutus.html">About Us</a></li>
-                    <li style="font-weight:; color: white;"><a href="">Contact Us</a></li>
-                    <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/services.html">Services</a></li>
-                    <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/homecare.html">Career</a></li>
-                    <li style="font-weight:; color: white;"><a href="">Blogs</a></li>
+                    <li style="font-weight:; color: white;"><a href="aboutus.html">About Us</a></li>
+                    <li style="font-weight:; color: white;"><a href="contactus.html">Contact Us</a></li>
+                    <li style="font-weight:; color: white;"><a href="services.html">Services</a></li>
+                    <li style="font-weight:; color: white;"><a href="homecare.html">Career</a></li>
+                    <li style="font-weight:; color: white;"><a href="blog.html">Blogs</a></li>
                   </ul>
                 </div>
 
                 <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
                   <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff">&nbsp;Quick Links</h6>
                   <ul class="footer-links">
-                    <li><a href="">Respite Care</a></li>
-                    <li><a href="">Homekeeping</a></li>
-                    <li><a href="">Companionship Care</a></li>
-                    <li><a href="">Medication Reminder</a></li>
-                    <li><a href="">Meal Preparation</a></li>
+                    <li><a href="respitecare.html">Respite Care</a></li>
+                    <li><a href="hha.html">Home Health Aide</a></li>
+                    <li><a href="companionship.html">Companionship Care</a></li>
+                    <li><a href="24care.html">24 Hour Caregivers</a></li>
                   </ul>
                 </div>
               </div>
@@ -151,10 +145,16 @@
                 <p class="copyright-text" style="font-weight: 700; color: white; padding-bottom: 4%;">Copyright &copy; 2022 All Rights Reserved by
                   <a href="#">Comfort Loving Homecare</a>.
                 </p>
-                <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA</p>
+                <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA<br>Tel: +717-824-7199</p>
+                <br>
+                <i href="https://www.facebook.com/comfortlovinghc" style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-facebook"></i>
+                <i href="https://mobile.twitter.com/comfortlovinghc" style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-twitter"></i>
+                <i href="https://www.linkedin.com/company/comfort-loving-home-care/" style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-linkedin"></i>
+                <i href="https://www.instagram.com/comfortlovinghc/" style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-instagram"></i>
+                <i href="https://www.comfortlovinghomecare.com/" style="color: #79dcff; padding-right: 2%;" class="fa-solid fa-2x fa-earth-americas"></i>
               </div>
               <div class="col justify-right">
-                <iframe
+                <iframe class="mapmobile"
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.930152817749!2d-76.58311668511665!3d40.07697008415748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c89bc7ab713b29%3A0x10d8377a8885e2d5!2sN%20Queen%20St%2C%20Maytown%2C%20PA%2017547%2C%20USA!5e0!3m2!1sen!2suk!4v1667959344362!5m2!1sen!2suk"
                   width="420" height="180" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
