--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="images/HHA.png" class="card-img-top" alt="...">
+            <img href="hha.html" src="images/HHA.png" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">We know how important it is for many seniors to continue living in their
                 homes, and we are proud to make that possible. Most seniors find joy and meaning when they can live in the home
