--- a/hha.html
+++ b/hha.html
@@ -147,11 +147,16 @@
                 </p>
                 <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA<br>Tel: +717-824-7199</p>
                 <br>
-                <i href="https://www.facebook.com/comfortlovinghc" style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-facebook"></i>
-                <i href="https://mobile.twitter.com/comfortlovinghc" style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-twitter"></i>
-                <i href="https://www.linkedin.com/company/comfort-loving-home-care/" style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-linkedin"></i>
-                <i href="https://www.instagram.com/comfortlovinghc/" style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-instagram"></i>
-                <i href="https://www.comfortlovinghomecare.com/" style="color: #79dcff; padding-right: 2%;" class="fa-solid fa-2x fa-earth-americas"></i>
+                <a href="https://www.facebook.com/comfortlovinghc">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-facebook"></i></a>
+                <a href="https://mobile.twitter.com/comfortlovinghc">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-twitter"></i></a>
+                <a href="https://www.linkedin.com/company/comfort-loving-home-care/">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/comfortlovinghc/">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-instagram"></i></a>
+                <a href="https://www.comfortlovinghomecare.com/">
+                  <i style="color: #79dcff; padding-right: 2%;" class="fa-solid fa-2x fa-earth-americas"></i></a>
               </div>
               <div class="col justify-right">
                 <iframe class="mapmobile"
