--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="">
     <nav class="navbar navbar-expand-lg" style="">
       <div class="container-fluid">
-        <a href="" class="navbar-brand">
+        <a href="index.html" class="navbar-brand">
           <img class="imgnav" src="images/clhcfinallonglogowhite.png" height="50" alt="CLHC">
         </a>
         <button type="button" class="animate__animated animate__flipInX navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -160,7 +160,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img href="hha.html" src="images/HHA.png" class="card-img-top" alt="...">
+            <a  href="hha.html"><img src="images/HHA.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">We know how important it is for many seniors to continue living in their
                 homes, and we are proud to make that possible. Most seniors find joy and meaning when they can live in the home
@@ -174,7 +174,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="images/CC.png" class="card-img-top" alt="...">
+            <a  href="companionship.html"><img src="images/CC.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">Our compassionate caregivers help older adults live
                 independently and comfortably in their own homes. The comprehensive services we offer are customized and
@@ -186,7 +186,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="images/RC.png" class="card-img-top" alt="...">
+            <a  href="respitecare.html"><img src="images/RC.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">Respite care is defined as the transfer of primary caregiving
                 responsibilities to another person, typically a professional caregiver, relative or friend, in order for primary
@@ -198,7 +198,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="images/24C.png" class="card-img-top" alt="...">
+            <a  href="24care.html"><img src="images/24C.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">If a 24-hour home care is desired, we have you covered. we work with you and your loved one to create an individualized plan of care</p>
               <a  href="24care.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
@@ -322,22 +322,21 @@
         <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
           <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff;">&nbsp;Categories</h6>
           <ul class="footer-links">
-            <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/aboutus.html">About Us</a></li>
-            <li style="font-weight:; color: white;"><a href="">Contact Us</a></li>
-            <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/services.html">Services</a></li>
-            <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/homecare.html">Career</a></li>
-            <li style="font-weight:; color: white;"><a href="">Blogs</a></li>
+            <li style="font-weight:; color: white;"><a href="aboutus.html">About Us</a></li>
+            <li style="font-weight:; color: white;"><a href="contactus.html">Contact Us</a></li>
+            <li style="font-weight:; color: white;"><a href="services.html">Services</a></li>
+            <li style="font-weight:; color: white;"><a href="homecare.html">Career</a></li>
+            <li style="font-weight:; color: white;"><a href="blog.html">Blogs</a></li>
           </ul>
         </div>
 
         <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
           <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff">&nbsp;Quick Links</h6>
           <ul class="footer-links">
-            <li><a href="">Respite Care</a></li>
-            <li><a href="">Homekeeping</a></li>
-            <li><a href="">Companionship Care</a></li>
-            <li><a href="">Medication Reminder</a></li>
-            <li><a href="">Meal Preparation</a></li>
+            <li><a href="respitecare.html">Respite Care</a></li>
+            <li><a href="hha.html">Home Health Aide</a></li>
+            <li><a href="companionship.html">Companionship Care</a></li>
+            <li><a href="24care.html">24 Hour Caregivers</a></li>
           </ul>
         </div>
       </div>
@@ -348,10 +347,21 @@
         <p class="copyright-text" style="font-weight: 700; color: white; padding-bottom: 4%;">Copyright &copy; 2022 All Rights Reserved by
           <a href="#">Comfort Loving Homecare</a>.
         </p>
-        <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA</p>
+        <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA<br>Tel: +717-824-7199</p>
+        <br>
+        <a href="https://www.facebook.com/comfortlovinghc">
+          <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-facebook"></i></a>
+        <a href="https://mobile.twitter.com/comfortlovinghc">
+          <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-twitter"></i></a>
+        <a href="https://www.linkedin.com/company/comfort-loving-home-care/">
+          <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/comfortlovinghc/">
+          <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-instagram"></i></a>
+        <a href="https://www.comfortlovinghomecare.com/">
+          <i style="color: #79dcff; padding-right: 2%;" class="fa-solid fa-2x fa-earth-americas"></i></a>
       </div>
       <div class="col justify-right">
-        <iframe
+        <iframe class="mapmobile"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.930152817749!2d-76.58311668511665!3d40.07697008415748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c89bc7ab713b29%3A0x10d8377a8885e2d5!2sN%20Queen%20St%2C%20Maytown%2C%20PA%2017547%2C%20USA!5e0!3m2!1sen!2suk!4v1667959344362!5m2!1sen!2suk"
           width="420" height="180" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
