--- a/respitecare.html
+++ b/respitecare.html
@@ -85,7 +85,7 @@
           hours a week or a few hours a day. Respite care can also be used for longer periods of time to accommodate an
           extended break or vacation.
           At Comfort Loving home care, we offer customized services and flexible scheduling that gives family caregivers a
-          well-deserved break. Care can be scheduled as-needed or as part of a weekly routine.</h4>
+          well-deserved break. Care can be scheduled as-needed or as part of a weekly routine.<br><br></h4>
 
           <div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/nqpgJm7/CLHC-banners-plai.png');" class="col-sm  text-center">
             <br>
