--- a/homecare.html
+++ b/homecare.html
@@ -63,58 +63,16 @@
     </nav>
     <img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;"
     src="https://i.ibb.co/HxPZxRL/CLHC-banners-Careers.png" class="cover-image">
-    <div class="con2" style="color: #77c9e6; background-color:; padding:; padding-bottom: 2rem;">
-      <!--<h1 class="display-4" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
-        Caregiver Jobs</h1>-->
-      <br>
-      <h4 class="display-4" style="padding: 3% 15% 2% 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
-You can make a rewarding career out of making a positive difference in the lives of local seniors and their families by joining
-our Visiting Angels' team. Visiting Angels' caregivers make life at home safer, happier, and more comfortable for seniors.
-As a member of the Visiting Angels team, you will make aging in place possible and help minimize the risk of senior isolation
-and the effects that come with it.</h4>
-
-<h4 class="display-4" style="padding: 0 15% 2% 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
-CLHC offers a wide range of caregiver jobs to qualified applicants. We recruit positions related to:<br><br>
-Our locations offer part-time and full-time home care positions with flexible scheduling and highly competitive pay.<br><br>
-<ul>
-  <li>Companion care</li>
-  <li>Elderly care</li>
-  <li>Personal or private care</li>
-  <li>Assisted living</li>
-  <li>Home care assistants (home care aides)</li>
-</ul>
-<br>
-
-<h4 style="padding: 7% 15% 7% 15%; color: black; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png'); text-align: left; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">Our locations offer <span style="font-weight: 700;">part-time and full-time</span> home care positions with flexible scheduling and highly competitive pay.<br><br>
-Our professional caregiver duties will vary depending on the needs and requests of the client and family. Common home care
-duties and caregiver job descriptions may include:<br><br>
-<ul>
-<li>Personal care assistance (bathing, grooming, dressing, toileting, etc.)</li>
-<li>Companionship and emotional support</li>
-<li>Meal planning and preparation</li>
-<li>Laundry and light housekeeping</li>
-<li>Medication reminders</li>
-<li>Assistance with other activities of daily living </li>
-</ul>
+    <h4 style="padding: 5% 15% 7% 15%; color: black; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png');
+    text-align: left; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">Our locations offer
+    <span style="font-weight: 700;">part-time and full-time</span> home care positions with flexible scheduling and highly
+    competitive pay.<br><br>
+      Start a fulfilling caregiver career with Comfort Loving home care<br><br>
+      Whether you're looking for a part-time job, or the start of a lifelong career, we have something for you.
+      We're looking for compassionate caregivers who are passionate about helping others. See why so many have chosen
+      Comfort Loving home care as their career:
 
 <br>
-<h4 class="display-4" style="padding: 5% 15% 7% 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
-  We believe a caregiver's enthusiasm and passion for building relationships with clients is as important as their professional qualifications. Above all else, we are searching for positive and hardworking people who love caring for others.
-  <br>
-  We look for caregivers who demonstrate the following qualities:<br><br>
-<ul>
-<li>Warmth, kindness, and a loving spirit</li>
-<li>Empathy and compassion</li>
-<li>Motivation and patience</li>
-<li>Communication and listening skills</li>
-<li>Observation and attention to detail</li>
-<li>Time management and organization</li>
-</ul>
-<br>
-Additional qualifications or certifications may be required, depending on the hiring practices of your local office or
-regulations in your state. We encourage you to speak with your local Visiting Angels office about its hiring practices
-and job requirements.
-</h4>
   </div>
 
   <div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png');" class="col-sm">
