--- a/24care.html
+++ b/24care.html
@@ -119,7 +119,7 @@
             <br>
             <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center;
             color: white; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight:700;">
-              Are you interested in our Home Health Aide services? Click the 'Contact us' button below for more information or call us now on (+717-824-7199).</h4>
+              Are you interested in our 24 Hour Care services? Click the 'Contact us' button below for more information or call us now on (+717-824-7199).</h4>
               <br><a href="contactus.html" class="btn btn-md contactusbtn text-center" role="button" aria-disabled="true"
               style="border: 4px solid white;
               border-radius: 25px; color: white;
