--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
     </nav>
 
     <img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/9sK3czk/CLHC-banners-SERVICES.png" class="cover-image">
-    <div class="con2" style="color: black; background-color:; padding:; padding-bottom: 2rem;">
+    <div class="con2" style="color: black; background-color:; padding:; padding-bottom:;">
       <!--<h1 class="display-4" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
         Caregiver Jobs</h1>-->
       <br>
