--- a/contactus.html
+++ b/contactus.html
@@ -80,7 +80,7 @@
                   Marietta, Lancaster County, PA,<br>
                   Pennsylvenia, USA<br><br>
                   <span style="font-size: 1rem; color: #455434; font-family: 'Quicksand', sans-serif; font-weight: 800;">
-                  <i class="fa-solid fa-phone-volume"></i> Telephone</span><br> Tel: +717-824-7199<br><br>
+                  <i class="fa-solid fa-phone-volume"></i> Telephone</span><br> +717-824-7199<br><br>
                   <span style="font-size: 1rem; color: #455434; font-family: 'Quicksand', sans-serif; font-weight: 800;">
                   <i class="fa-solid fa-phone-volume"></i> Email</span><br> comfortlovinghomecare@gmail.com<br><br>
               <iframe class=""
