--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           <br><br class="secondbr">
           <h1 class="display-4" style="font-size: 1.70rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">👋🏼👋🏼👋🏼</h1>
           <h3 class="lead" style="font-family: 'Quicksand', sans-serif; font-weight: 700; font-size: 1.56rem;"><span style="color: #455434; font-weight: 900;">Comfort Loving Home Care</span> is the
-            home of comfort. Welcome to Pennsylvenia’s Finest Home Care Provider.</h3>
+            home of comfort. Welcome to Pennsylvania’s Finest Home Care Provider.</h3>
           <p class="lead" style="font-family: 'Quicksand', sans-serif; font-weight: 400; font-size: 1rem;">Comfort Loving Home Care is dedicated
-            to providing the highest quality in home health and personal care services for the valued patients in Pennsylvenia.</p>
+            to providing the highest quality in home health and personal care services for the valued patients in Pennsylvania.</p>
           <br>
           <a href="services.html" class="btn btn-sm" role="button" aria-disabled="true" style="background-color: #77c9e6; color: white; border: 4px solid #77c9e6; border-radius: 25px;
             font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;<i class="fa-regular fa-calendar-check"></i> Book Assessment&nbsp;&nbsp;</a>
@@ -251,7 +251,7 @@
         <p class="copyright-text" style="font-weight: 700; color: white; padding-bottom: 4%;">Copyright &copy; 2022 All Rights Reserved by
           <a href="#">Comfort Loving Homecare</a>.
         </p>
-        <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA<br>Tel: +717-824-7199</p>
+        <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvania, USA<br>Tel: +717-824-7199</p>
         <br>
         <a href="https://www.facebook.com/comfortlovinghc">
           <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-facebook"></i></a>
