--- a/contactus.html
+++ b/contactus.html
@@ -78,7 +78,7 @@
                   <span style="font-size: 1rem; color: #455434; font-family: 'Quicksand', sans-serif; font-weight: 800;">
                   <i class="fa-solid fa-house"></i> Address</span><br> 324 North Queen Street,<br>
                   Marietta, Lancaster County, PA,<br>
-                  Pennsylvenia, USA<br><br>
+                  Pennsylvania, USA<br><br>
                   <span style="font-size: 1rem; color: #455434; font-family: 'Quicksand', sans-serif; font-weight: 800;">
                   <i class="fa-solid fa-phone-volume"></i> Telephone</span><br> +717-824-7199<br><br>
                   <span style="font-size: 1rem; color: #455434; font-family: 'Quicksand', sans-serif; font-weight: 800;">
