--- a/24care.html
+++ b/24care.html
@@ -171,7 +171,7 @@
                 <p class="copyright-text" style="font-weight: 700; color: white; padding-bottom: 4%;">Copyright &copy; 2022 All Rights Reserved by
                   <a href="#">Comfort Loving Homecare</a>.
                 </p>
-                <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA<br>Tel: +717-824-7199</p>
+                <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvania, USA<br>Tel: +717-824-7199</p>
                 <br>
                 <a href="https://www.facebook.com/comfortlovinghc">
                   <i style="color: #79dcff; padding-right: 2%;" class="fa-brands fa-2x fa-square-facebook"></i></a>
